--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,7 @@ pydantic-settings==2.1.0
 redis==5.0.1
 openai==1.10.0
 python-dotenv==1.0.0
-tiktoken==0.5.2
+# tiktoken==0.5.2  # Removed - requires Rust compilation on Render
 pytest==7.4.4
 pytest-asyncio==0.23.3
 pytest-cov==4.1.0
