--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,13 +3,15 @@ uvicorn[standard]==0.27.0
 sqlalchemy==2.0.25
 psycopg2-binary==2.9.9
 alembic==1.13.1
-pydantic==2.5.3
-pydantic-settings==2.1.0
+# Updated to versions with pre-built wheels (no Rust/maturin compilation needed)
+pydantic>=2.9.0
+pydantic-settings>=2.5.0
 redis==5.0.1
-openai==1.10.0
+# Updated for compatibility with newer pydantic
+openai>=1.54.0
 python-dotenv==1.0.0
 # tiktoken==0.5.2  # Removed - requires Rust compilation on Render
 pytest==7.4.4
 pytest-asyncio==0.23.3
 pytest-cov==4.1.0
-httpx==0.26.0
+httpx>=0.27.0
