--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
-sqlalchemy==2.0.25
+# Upgraded for Python 3.13 compatibility
+sqlalchemy>=2.0.36
 psycopg2-binary==2.9.9
-alembic==1.13.1
+alembic>=1.14.0
 # Updated to versions with pre-built wheels (no Rust/maturin compilation needed)
 pydantic>=2.9.0
 pydantic-settings>=2.5.0
