--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.109.0
 uvicorn[standard]==0.27.0
 # Upgraded for Python 3.13 compatibility
 sqlalchemy>=2.0.36
-psycopg2-binary==2.9.9
+psycopg2-binary>=2.9.10
 alembic>=1.14.0
 # Updated to versions with pre-built wheels (no Rust/maturin compilation needed)
 pydantic>=2.9.0
